<resources>
    <string name="app_name">Chinese Zodiac</string>
    <string name="welcome_to">Welcome to</string>
    <string name="rules">To personalize your experience and provide you with the most accurate advice according to the Chinese Zodiac and Lunar Calendar, we\'d love to know a little more about you. Your information will be kept confidential and used only to enhance your experience.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mysteries_of_the_east">Mysteries of the East</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_birthday">Enter your birthday</string>
    <string name="test">test</string>
    <string name="you_were_born">"You were born in the year: "</string>
    <string name="according_to">" according to the Chinese calendar. "</string>
    <string name="desc1">People born in the Year of the Rat are usually intelligent and resourceful. They can be modest but very ambitious.</string>
    <string name="desc2">People born in the Year of the Ox are known for their resilience and reliability. They are usually hardworking and persistent.</string>
    <string name="desc3">People born in the Year of the Tiger are passionate and courageous. They often become leaders and commanders.</string>
    <string name="desc4">People born in the Year of the Rabbit often have kindness and sensitivity. They can be very friendly and charming.</string>
    <string name="desc5">People born in the Year of the Dragon usually have strength and energy. They can be ambitious and self-confident.</string>
    <string name="desc6">People born in the Year of the Snake often have intelligence and charisma. They can be mysterious and clever.</string>
    <string name="desc7">People born in the Year of the Horse are known for their energy and independence. They often seek freedom and adventures.</string>
    <string name="desc8">People born in the Year of the Sheep usually have gentle and kind natures. They can be creative and sensitive.</string>
    <string name="desc9">People born in the Year of the Monkey often have wit and charm. They can be intelligent and sociable.</string>
    <string name="desc10">People born in the Year of the Rooster are known for their organization and precision. They can be responsible and loyal.</string>
    <string name="desc11">People born in the Year of the Dog usually have loyalty and devotion. They can be kind and protective of others.</string>
    <string name="desc12">People born in the Year of the Pig often have kindness and generosity. They can be calm and intelligent.</string>
    <string name="you_were_born_in_the_year">You were born in the year:</string>
    <string name="according_to_the_chinese_calendar">according to the Chinese calendar.</string>
    <string name="no_advice">There is no advice for this month.</string>
    <string name="advice_january">In January, it\'s important to stay persistent and set clear goals for yourself. Don\'t be afraid to overcome challenges and move forward.</string>
    <string name="advice_february">February brings opportunities for creativity and self-expression. Don\'t hesitate to express your ideas and feelings.</string>
    <string name="advice_march">In March, focus on self-improvement and personal growth. Pay attention to your health and well-being.</string>
    <string name="advice_april">April warns against risky decisions. Be attentive and cautious in your actions.</string>
    <string name="advice_may">May is a time for new beginnings and possibilities. Use this time to pursue your ambitions.</string>
    <string name="advice_june">June brings stability and harmony. Concentrate on your relationships with loved ones and creating a cozy environment.</string>
    <string name="advice_july">In July, be open to new adventures and experiences. Explore the world and learn new things.</string>
    <string name="advice_august">August implies activity and hard work. Work towards your goals and strive for success.</string>
    <string name="advice_september">September brings the opportunity to review your plans and priorities. Be prepared for changes and adaptation.</string>
    <string name="advice_october">October warns against excessive extravagance and recklessness. Manage your resources wisely.</string>
    <string name="advice_november">In November, focus on your relationships and communication. Be attentive to the needs of others.</string>
    <string name="advice_december">December offers a chance to relax and enjoy the holidays. Don\'t forget to take care of yourself and your well-being.</string>
    <string name="continue_go">Continue</string>
    <string name="the_sages_tv">The sages of the world answering your question...</string>
    <string name="no_tips_available">No tips available</string>
    <string name="an1_1">Refresh your professional skills to stay ahead.</string>
    <string name="an1_2">Take care of your health and maintain an active lifestyle.</string>
    <string name="an1_3">Focus on financial stability and savings.</string>
    <string name="an1_4">Expand your social circle and create new connections.</string>
    <string name="an1_5">Set ambitious goals for yourself and pursue them.</string>
    <string name="an1_6">Remember the importance of learning and self-improvement.</string>
    <string name="an1_7">Exercise caution in financial decisions and investments.</string>
    <string name="an1_8">Maintain harmonious relationships in your family and at work.</string>
    <string name="an1_9">Don\'t forget about your dreams and aspirations.</string>
    <string name="an1_10">Trust your intuition and move forward confidently.</string>
    <string name="an2_1">Focus on your work and strive for professional success.</string>
    <string name="an2_2">Be patient and persistent in achieving your goals.</string>
    <string name="an2_3">Strengthen your health and maintain a work-life balance.</string>
    <string name="an2_4">Follow financial discipline and save money.</string>
    <string name="an2_5">Develop your talents and abilities.</string>
    <string name="an2_6">Seek harmony in your family relationships.</string>
    <string name="an2_7">Look for new opportunities for personal growth and development.</string>
    <string name="an2_8">Stay true to your principles and values.</string>
    <string name="an2_9">Help others and show compassion.</string>
    <string name="an2_10">Achieve stability and confidence in the future.</string>
    <string name="an3_1">Focus on your goals and pursue them persistently.</string>
    <string name="an3_2">Maintain an active lifestyle and take care of your physical health.</string>
    <string name="an3_3">Be decisive and make important decisions with confidence.</string>
    <string name="an3_4">Develop your talents and use them in your work and hobbies.</string>
    <string name="an3_5">Strengthen your bonds with family and friends.</string>
    <string name="an3_6">Strive for financial stability and invest wisely.</string>
    <string name="an3_7">Look for new opportunities for career growth and personal development.</string>
    <string name="an3_8">Trust your intuition and listen to your inner self.</string>
    <string name="an3_9">Be open to new ideas and adventures.</string>
    <string name="an3_10">Help others and show kindness in your everyday life.</string>
    <string name="an4_1">Maintain harmony and balance in your life.</string>
    <string name="an4_2">Be diplomatic and resolve conflicts peacefully.</string>
    <string name="an4_3">Strengthen your health through a healthy diet and physical activity.</string>
    <string name="an4_4">Focus on career growth and professional goals.</string>
    <string name="an4_5">Develop your creative abilities and hobbies.</string>
    <string name="an4_6">Maintain close relationships with family and friends.</string>
    <string name="an4_7">Invest in education and personal development.</string>
    <string name="an4_8">Be open to new acquaintances and opportunities.</string>
    <string name="an4_9">Strive for financial stability and economic independence.</string>
    <string name="an4_10">Listen to your heart and follow your passions.</string>
    <string name="an5_1">Use your energy and passion to achieve your goals.</string>
    <string name="an5_2">Be courageous and take on a leadership role.</string>
    <string name="an5_3">Develop your creative abilities and apply them in work and hobbies.</string>
    <string name="an5_4">Strengthen personal and professional relationships.</string>
    <string name="an5_5">Invest in your education and keep learning.</string>
    <string name="an5_6">Focus on financial stability and effective resource management.</string>
    <string name="an5_7">Be open to new opportunities and adventures.</string>
    <string name="an5_8">Remember the importance of honesty and fairness in all actions.</string>
    <string name="an5_9">Use your intuition and wisdom to make decisions.</string>
    <string name="an5_10">Maintain a balance between work and personal life.</string>
    <string name="an6_1">Be strategists and plan your actions in advance.</string>
    <string name="an6_2">Focus on developing your intellectual abilities.</string>
    <string name="an6_3">Maintain your health through physical activity and proper nutrition.</string>
    <string name="an6_4">Strengthen your relationships with loved ones and friends.</string>
    <string name="an6_5">Strive for financial stability and make sensible investments.</string>
    <string name="an6_6">Practice friendliness and respect in communication with others.</string>
    <string name="an6_7">Develop your communication and persuasion skills.</string>
    <string name="an6_8">Seek new ways to achieve your goals and tasks.</string>
    <string name="an6_9">Be disciplined and consistent in your actions.</string>
    <string name="an6_10">Listen to the advice of experienced individuals and learn from their experience.</string>
    <string name="an7_1">Be active and take care of your physical well-being.</string>
    <string name="an7_2">Develop your communication skills and establish new connections.</string>
    <string name="an7_3">Remember the importance of freedom and independence.</string>
    <string name="an7_4">Focus on personal and professional growth.</string>
    <string name="an7_5">Strive to achieve your goals with optimism and determination.</string>
    <string name="an7_6">Invest in education and professional development.</string>
    <string name="an7_7">Maintain harmony in relationships with loved ones and colleagues.</string>
    <string name="an7_8">Explore new areas of interest and hobbies.</string>
    <string name="an7_9">Be tolerant and respectful of different viewpoints.</string>
    <string name="an7_10">Don\'t be afraid to take risks and move forward, even if it\'s scary.</string>
    <string name="an8_1">Focus on your inner harmony and spiritual development.</string>
    <string name="an8_2">Pay attention to your physical and emotional health.</string>
    <string name="an8_3">Nurture relationships with loved ones and friends.</string>
    <string name="an8_4">Develop your creative abilities and hobbies.</string>
    <string name="an8_5">Strive for financial stability and effective resource management.</string>
    <string name="an8_6">Be compassionate and attentive to the needs of others.</string>
    <string name="an8_7">Seek ways to contribute to society and the environment.</string>
    <string name="an8_8">Listen to your intuitive feelings and inner voices.</string>
    <string name="an8_9">Aim for peace and harmony in the world.</string>
    <string name="an8_10">Don\'t forget the importance of spirituality and inner strength.</string>
</resources>