<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_bg"
    tools:context=".presentation.start_fragments.WelcomeFragment">

    <ImageView
        android:id="@+id/welcome_img"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/welcome_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_img">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/podkova_extrabold"
            android:gravity="center"
            android:shadowColor="#FEE2AD"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:text="@string/welcome_to"
            android:textColor="#993725"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/game_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/podkova_extrabold"
            android:gravity="center"
            android:maxLines="3"
            android:shadowColor="#6C2110"
            android:shadowDx="6"
            android:shadowDy="6"
            android:shadowRadius="3"
            android:text="@string/mysteries_of_the_east"
            android:textColor="#FFEE96"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:gravity="center"
            android:lineSpacingExtra="8dp"
            android:text="@string/rules"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/podkova_extrabold"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="#FFEB3B"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>