<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_bg"
    tools:context=".presentation.start_fragments.EnterDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/podkova_extrabold"
            android:gravity="center"
            android:shadowColor="#FEE2AD"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:text="@string/enter_your_name"
            android:textColor="#993725"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#E48901"
            android:fontFamily="@font/podkova_extrabold"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/podkova_extrabold"
            android:gravity="center"
            android:shadowColor="#FEE2AD"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:text="@string/enter_your_birthday"
            android:textColor="#993725"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#E48901"
            android:clickable="true"
            android:focusable="false"
            android:fontFamily="@font/podkova_extrabold"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/podkova_extrabold"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="#FFEB3B"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>