<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_bg"
    tools:context=".presentation.start_fragments.MoreInfoFragment">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/podkova_extrabold"
            android:gravity="center"
            android:shadowColor="#FEE2AD"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:text="@string/welcome_to"
            android:textColor="#993725"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/game_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/podkova_extrabold"
            android:gravity="center"
            android:maxLines="3"
            android:shadowColor="#6C2110"
            android:shadowDx="6"
            android:shadowDy="6"
            android:shadowRadius="3"
            android:text="@string/mysteries_of_the_east"
            android:textColor="#FFEE96"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1">

        <ImageView
            android:id="@+id/img_of_calendar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="20sp" />

        <TextView
            android:id="@+id/more_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/podkova_extrabold"
            android:gravity="center"
            android:maxLines="3"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_btn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/continue_btn_bg"
            android:fontFamily="@font/podkova_extrabold"
            android:gravity="center"
            android:maxLines="3"
            android:shadowColor="#6C2110"
            android:text="@string/continue_go"
            android:textColor="#FFEE96"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>